--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -12,3 +12,10 @@
     </ul>
   </div>
 </div>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-2">
+      <%=link_to "Create a new restaurant", new_restaurant_path, class: "btn btn-primary"%>
+    </div>
+  </div>
+</div>
