--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,16 @@
 <h1 class="text-center">Review <%=@restaurant.name%></h1>
-<div class="box text-center">
-  <div class="box-body">
-<%= simple_form_for([@restaurant, @review]) do |f| %>
-  <%= f.input :rating %>
-  <%= f.input :content %>
-  <%= f.button :submit, class: "btn btn-primary text-center" %>
-<% end %>
-</div>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-2">
+      <div class="box text-center">
+        <div class="box-body">
+          <%= simple_form_for([@restaurant, @review]) do |f| %>
+            <%= f.input :rating %>
+            <%= f.input :content %>
+            <%= f.button :submit, class: "btn btn-primary text-center" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
